k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contactservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: contactservice
  template:
    metadata:
      labels:
        app: contactservice
    spec:
      containers:
        - name: contactservice
          image: gcr.io/esoteric-pen-343317/contactservice:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: contactservice
spec:
  type: NodePort
  selector:
    app: contactservice
  ports:
    - port: 9002
      targetPort: 9002
